k8s-manifests/jobs-service-authpolicy.yaml
---
# Allow Kong gateway (without sidecar) to access jobs-service
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: jobs-service-permissive
  namespace: default
spec:
  selector:
    matchLabels:
      app: jobs-service
  mtls:
    mode: PERMISSIVE
