k8s-manifests/notification-service-authpolicy.yaml
---
# Allow Kong gateway (without sidecar) to access notification-service
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: notification-service-permissive
  namespace: default
spec:
  selector:
    matchLabels:
      app: notification-service
  mtls:
    mode: PERMISSIVE
