k8s-manifests/user-service-authpolicy.yaml
---
# Allow Kong gateway (without sidecar) to access user-service
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: user-service-permissive
  namespace: default
spec:
  selector:
    matchLabels:
      app: user-service
  mtls:
    mode: PERMISSIVE
