k8s-manifests/postgres-payment.yaml
# PostgreSQL for payment Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-payment
  template:
    metadata:
      labels:
        app: postgres-payment
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-payment
spec:
  selector:
    app: postgres-payment
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
