k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: global-rate-limit,request-logging
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/jobs
        pathType: Prefix
        backend:
          service:
            name: jobs-service
            port:
              number: 80
      - path: /api/v2/jobs
        pathType: Prefix
        backend:
          service:
            name: jobs-service
            port:
              number: 80
      - path: /api/v1/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/v1/payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
      - path: /api/v1/application
        pathType: Prefix
        backend:
          service:
            name: application-service
            port:
              number: 80
